unpackaged/objects/CXOne_Interaction_Event__c.object
<CustomObject>
    <fields>
        <fullName>CXOne_Interaction__c</fullName>
        <label>CXOne Interaction</label>
        <referenceTo>CXOne_Interaction__c</referenceTo>
        <relationshipLabel>CXOne Interaction Event</relationshipLabel>
        <relationshipName>CXOne_Interaction_Event</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Timestamp__c</fullName>
        <label>Event Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Parked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CXOne Interaction Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CXOne Interaction Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CXOne Interaction Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>